Fix desktop scrollbar and add more ios workarounds

--- a/docgen/doc/public/web/style.css
+++ b/docgen/doc/public/web/style.css
@@ -174,6 +174,7 @@ code {
 .sidebar,
 .content {
 	max-height: 100%;
+	max-height: 100vh;
 }
 
 .channel {
